# demoforge

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  TEST_SUMMARY.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.github/workflows/: demo-on-release.yml
assets/templates/: default_brand.yml
demoforge/: __init__.py  analytics.py  branding.py  cache.py  cli.py  config.py  models.py  pipeline.py
demoforge/analyzer/: __init__.py  ai_analyzer.py  repo_analyzer.py  web_analyzer.py
demoforge/assembler/: __init__.py  compositor.py  overlays.py  subtitles.py  transitions.py
demoforge/capturer/: __init__.py  annotator.py  auth.py  browser.py  fallback.py  vision_analyzer.py
demoforge/scripter/: __init__.py  duration.py  script_generator.py
demoforge/scripter/templates/: customer.j2  developer.j2  investor.j2  technical.j2
demoforge/server/: __init__.py  app.py  dependencies.py  sse.py
demoforge/server/routes/: __init__.py  analytics.py  health.py  pipeline.py  projects.py
demoforge/voice/: __init__.py  base.py  edge_tts_engine.py  kokoro_tts.py  language_voices.py  pocket_tts.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ConfirmDialog.tsx  FormError.tsx  Layout.tsx  PipelineProgress.tsx  VideoPlayer.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  NewProject.tsx  ProjectDetail.tsx
frontend/src/types/: index.ts
tests/: conftest.py  test_api.py  test_cache.py  test_config.py  test_models.py  test_pipeline.py  test_subtitles.py  test_transitions.py  test_tts_selection.py
